--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     {% if current_user %}
       <p><a href="{{ current_user.profile_url }}"><img src="http://graph.facebook.com/{{ current_user.id }}/picture?type=square"/></a></p>
       <p>Hello, {{ current_user.name|escape }}</p>
-      <p>{{ friend_list }}</p>
+      <p>{{ current_user.friends }}</p>
     {% endif %}
 
     <div id="fb-root"></div>
